Bug 1229752 - When C++ APZ scroll offset diverges from the Gecko scroll offset, it is not being applied properly to the event position r=botond,tnikkel